Formatted source code with a minor change on conventions