@@ -33,173 +33,173 @@ import pt.ist.fenixWebFramework.services.Service;
 
 public class ReadGratuitySituationListByExecutionDegreeAndSpecialization extends FenixService {
 
-	/**
-	 * Constructor
-	 */
-	public ReadGratuitySituationListByExecutionDegreeAndSpecialization() {
+    /**
+     * Constructor
+     */
+    public ReadGratuitySituationListByExecutionDegreeAndSpecialization() {
 
-	}
+    }
 
-	/*
-	 * Return an hash map with three objects: 1. at first position a list of
-	 * infoGratuitySituation 2. in second, a double with the total of list's
-	 * payed values 3. in third, a double with the total of list's remaning
-	 * values
-	 */
-	@Checked("RolePredicates.MANAGER_PREDICATE")
-	@Service
-	public static Object run(Integer executionDegreeId, String executionYearName, String persistentSupportecializationName,
-			String gratuitySituationTypeName) throws FenixServiceException {
+    /*
+     * Return an hash map with three objects: 1. at first position a list of
+     * infoGratuitySituation 2. in second, a double with the total of list's
+     * payed values 3. in third, a double with the total of list's remaning
+     * values
+     */
+    @Checked("RolePredicates.MANAGER_PREDICATE")
+    @Service
+    public static Object run(Integer executionDegreeId, String executionYearName, String persistentSupportecializationName,
+            String gratuitySituationTypeName) throws FenixServiceException {
 
-		// at least one of the arguments it's obligator
-		if (executionDegreeId == null && executionYearName == null) {
-			throw new FenixServiceException("error.masterDegree.gratuity.impossible.studentsGratuityList");
-		}
+        // at least one of the arguments it's obligator
+        if (executionDegreeId == null && executionYearName == null) {
+            throw new FenixServiceException("error.masterDegree.gratuity.impossible.studentsGratuityList");
+        }
 
-		HashMap result = null;
+        HashMap result = null;
 
-		try {
+        try {
 
-			List executionDegreeList = new ArrayList();
+            List executionDegreeList = new ArrayList();
 
-			if (executionDegreeId != null) {
+            if (executionDegreeId != null) {
 
-				ExecutionDegree executionDegree = rootDomainObject.readExecutionDegreeByOID(executionDegreeId);
-				executionDegreeList.add(executionDegree);
+                ExecutionDegree executionDegree = rootDomainObject.readExecutionDegreeByOID(executionDegreeId);
+                executionDegreeList.add(executionDegree);
 
-			} else {
-				// the execution degree wasn't supplied so
-				// we have to show all execution degrees from the choosen year
-				if (executionYearName != null) {
-					ExecutionYear executionYear = ExecutionYear.readExecutionYearByName(executionYearName);
-					if (executionYear != null) {
-						executionDegreeList =
-								ExecutionDegree.getAllByExecutionYearAndDegreeType(executionYear.getYear(),
-										DegreeType.MASTER_DEGREE);
-					}
-				}
-			}
+            } else {
+                // the execution degree wasn't supplied so
+                // we have to show all execution degrees from the choosen year
+                if (executionYearName != null) {
+                    ExecutionYear executionYear = ExecutionYear.readExecutionYearByName(executionYearName);
+                    if (executionYear != null) {
+                        executionDegreeList =
+                                ExecutionDegree.getAllByExecutionYearAndDegreeType(executionYear.getYear(),
+                                        DegreeType.MASTER_DEGREE);
+                    }
+                }
+            }
 
-			if (executionDegreeList == null || executionDegreeList.size() == 0) {
-				throw new FenixServiceException("error.masterDegree.gratuity.impossible.studentsGratuityList");
-			}
+            if (executionDegreeList == null || executionDegreeList.size() == 0) {
+                throw new FenixServiceException("error.masterDegree.gratuity.impossible.studentsGratuityList");
+            }
 
-			// GRATUITY SITUATION
-			GratuitySituationType gratuitySituationType = null;
-			if (!gratuitySituationTypeName.equals("all")) {
-				gratuitySituationType = GratuitySituationType.valueOf(gratuitySituationTypeName);
-			}
+            // GRATUITY SITUATION
+            GratuitySituationType gratuitySituationType = null;
+            if (!gratuitySituationTypeName.equals("all")) {
+                gratuitySituationType = GratuitySituationType.valueOf(gratuitySituationTypeName);
+            }
 
-			List infoGratuitySituationList = new ArrayList();
-			double totalPayedValue = 0;
-			double totalRemaingValue = 0;
+            List infoGratuitySituationList = new ArrayList();
+            double totalPayedValue = 0;
+            double totalRemaingValue = 0;
 
-			for (Iterator iter = executionDegreeList.iterator(); iter.hasNext();) {
-				ExecutionDegree executionDegree = (ExecutionDegree) iter.next();
-				GratuityValues gratuityValues = executionDegree.getGratuityValues();
+            for (Iterator iter = executionDegreeList.iterator(); iter.hasNext();) {
+                ExecutionDegree executionDegree = (ExecutionDegree) iter.next();
+                GratuityValues gratuityValues = executionDegree.getGratuityValues();
 
-				if (gratuityValues == null) {
-					continue;
-				}
+                if (gratuityValues == null) {
+                    continue;
+                }
 
-				List allStudentCurricularPlans = executionDegree.getDegreeCurricularPlan().getStudentCurricularPlans();
-				List filteredStudentCurricularPlans = (List) CollectionUtils.select(allStudentCurricularPlans, new Predicate() {
+                List allStudentCurricularPlans = executionDegree.getDegreeCurricularPlan().getStudentCurricularPlans();
+                List filteredStudentCurricularPlans = (List) CollectionUtils.select(allStudentCurricularPlans, new Predicate() {
 
-					@Override
-					public boolean evaluate(Object arg0) {
-						StudentCurricularPlan scp = (StudentCurricularPlan) arg0;
-						return scp.getSpecialization() != null;
-					}
-				});
+                    @Override
+                    public boolean evaluate(Object arg0) {
+                        StudentCurricularPlan scp = (StudentCurricularPlan) arg0;
+                        return scp.getSpecialization() != null;
+                    }
+                });
 
-				for (Iterator iterator = filteredStudentCurricularPlans.iterator(); iterator.hasNext();) {
-					StudentCurricularPlan studentCurricularPlan = (StudentCurricularPlan) iterator.next();
+                for (Iterator iterator = filteredStudentCurricularPlans.iterator(); iterator.hasNext();) {
+                    StudentCurricularPlan studentCurricularPlan = (StudentCurricularPlan) iterator.next();
 
-					GratuitySituation gratuitySituation =
-							studentCurricularPlan.getGratuitySituationByGratuityValuesAndGratuitySituationType(
-									gratuitySituationType, gratuityValues);
+                    GratuitySituation gratuitySituation =
+                            studentCurricularPlan.getGratuitySituationByGratuityValuesAndGratuitySituationType(
+                                    gratuitySituationType, gratuityValues);
 
-					if (gratuitySituation == null) {
-						// ignore them, because they will be created in the next
-						// day
-						// when the gratuity situation creator scheduled task
-						// runs
-						continue;
-					}
+                    if (gratuitySituation == null) {
+                        // ignore them, because they will be created in the next
+                        // day
+                        // when the gratuity situation creator scheduled task
+                        // runs
+                        continue;
+                    }
 
-					InfoGratuitySituation infoGratuitySituation =
-							InfoGratuitySituationWithInfoPersonAndInfoExecutionDegree.newInfoFromDomain(gratuitySituation);
+                    InfoGratuitySituation infoGratuitySituation =
+                            InfoGratuitySituationWithInfoPersonAndInfoExecutionDegree.newInfoFromDomain(gratuitySituation);
 
-					fillSituationType(infoGratuitySituation);
+                    fillSituationType(infoGratuitySituation);
 
-					List insuranceTransactionList =
-							studentCurricularPlan.getRegistration().readAllNonReimbursedInsuranceTransactionsByExecutionYear(
-									executionDegree.getExecutionYear());
+                    List insuranceTransactionList =
+                            studentCurricularPlan.getRegistration().readAllNonReimbursedInsuranceTransactionsByExecutionYear(
+                                    executionDegree.getExecutionYear());
 
-					/*
-					 * InsuranceTransaction insuranceTransaction =
-					 * insuranceTransactionDAO
-					 * .readByExecutionYearAndStudent(executionDegree
-					 * .getExecutionYear(), studentCurricularPlan
-					 * .getStudent());
-					 */
+                    /*
+                     * InsuranceTransaction insuranceTransaction =
+                     * insuranceTransactionDAO
+                     * .readByExecutionYearAndStudent(executionDegree
+                     * .getExecutionYear(), studentCurricularPlan
+                     * .getStudent());
+                     */
 
-					if (insuranceTransactionList.size() > 0) {
-						infoGratuitySituation.setInsurancePayed(PresentationConstants.PAYED_INSURANCE);
-					} else {
-						infoGratuitySituation.setInsurancePayed(PresentationConstants.NOT_PAYED_INSURANCE);
-					}
+                    if (insuranceTransactionList.size() > 0) {
+                        infoGratuitySituation.setInsurancePayed(PresentationConstants.PAYED_INSURANCE);
+                    } else {
+                        infoGratuitySituation.setInsurancePayed(PresentationConstants.NOT_PAYED_INSURANCE);
+                    }
 
-					gratuitySituation.updateValues();
-					final double payedValue = gratuitySituation.calculatePayedValue();
-					infoGratuitySituation.setPayedValue(payedValue);
-					totalPayedValue += payedValue;
+                    gratuitySituation.updateValues();
+                    final double payedValue = gratuitySituation.calculatePayedValue();
+                    infoGratuitySituation.setPayedValue(payedValue);
+                    totalPayedValue += payedValue;
 
-					infoGratuitySituationList.add(infoGratuitySituation);
+                    infoGratuitySituationList.add(infoGratuitySituation);
 
-					totalRemaingValue += infoGratuitySituation.getRemainingValue().doubleValue();
+                    totalRemaingValue += infoGratuitySituation.getRemainingValue().doubleValue();
 
-				}
+                }
 
-			}
+            }
 
-			// build the result that is a hash map with a list, total payed
-			// and
-			// remaining value
-			result = new HashMap();
-			result.put(Integer.valueOf(0), infoGratuitySituationList);
-			result.put(Integer.valueOf(1), new Double(totalPayedValue));
-			result.put(Integer.valueOf(2), new Double(totalRemaingValue));
-		} catch (pt.ist.fenixframework.pstm.IllegalWriteException e) {
-			throw e;
-		} catch (Exception e) {
+            // build the result that is a hash map with a list, total payed
+            // and
+            // remaining value
+            result = new HashMap();
+            result.put(Integer.valueOf(0), infoGratuitySituationList);
+            result.put(Integer.valueOf(1), new Double(totalPayedValue));
+            result.put(Integer.valueOf(2), new Double(totalRemaingValue));
+        } catch (pt.ist.fenixframework.pstm.IllegalWriteException e) {
+            throw e;
+        } catch (Exception e) {
 
-			e.printStackTrace();
-			if (e.getMessage() != null && e.getMessage().length() > 0) {
-				throw new FenixServiceException(e.getMessage());
-			}
-			throw new FenixServiceException("error.masterDegree.gratuity.impossible.studentsGratuityList");
+            e.printStackTrace();
+            if (e.getMessage() != null && e.getMessage().length() > 0) {
+                throw new FenixServiceException(e.getMessage());
+            }
+            throw new FenixServiceException("error.masterDegree.gratuity.impossible.studentsGratuityList");
 
-		}
+        }
 
-		return result;
-	}
+        return result;
+    }
 
-	private static void fillSituationType(InfoGratuitySituation infoGratuitySituation) throws Exception { // infoGratuitySituation
-		// .
-		// getRemainingValue
-		// (
-		// )
-		// contains the total value that
-		// a student has to
+    private static void fillSituationType(InfoGratuitySituation infoGratuitySituation) throws Exception { // infoGratuitySituation
+        // .
+        // getRemainingValue
+        // (
+        // )
+        // contains the total value that
+        // a student has to
 
-		// payed.
-		if (infoGratuitySituation.getRemainingValue().longValue() > 0) {
-			infoGratuitySituation.setSituationType(GratuitySituationType.DEBTOR);
-		} else if (infoGratuitySituation.getRemainingValue().longValue() == 0) {
-			infoGratuitySituation.setSituationType(GratuitySituationType.REGULARIZED);
-		} else if (infoGratuitySituation.getRemainingValue().longValue() < 0) {
-			infoGratuitySituation.setSituationType(GratuitySituationType.CREDITOR);
-		}
-	}
+        // payed.
+        if (infoGratuitySituation.getRemainingValue().longValue() > 0) {
+            infoGratuitySituation.setSituationType(GratuitySituationType.DEBTOR);
+        } else if (infoGratuitySituation.getRemainingValue().longValue() == 0) {
+            infoGratuitySituation.setSituationType(GratuitySituationType.REGULARIZED);
+        } else if (infoGratuitySituation.getRemainingValue().longValue() < 0) {
+            infoGratuitySituation.setSituationType(GratuitySituationType.CREDITOR);
+        }
+    }
 }
