@@ -12,18 +12,18 @@ import net.sourceforge.fenixedu.domain.RootDomainObject;
  */
 public class GaugingTestResult extends GaugingTestResult_Base {
 
-	public GaugingTestResult() {
-		super();
-		setRootDomainObject(RootDomainObject.getInstance());
-	}
+    public GaugingTestResult() {
+        super();
+        setRootDomainObject(RootDomainObject.getInstance());
+    }
 
-	public Double getCf() {
-		Long rounded = new Long(Math.round(Double.valueOf(getCfString().replace(',', '.')).doubleValue() * 10));
-		return new Double(rounded.doubleValue() / 10);
-	}
+    public Double getCf() {
+        Long rounded = new Long(Math.round(Double.valueOf(getCfString().replace(',', '.')).doubleValue() * 10));
+        return new Double(rounded.doubleValue() / 10);
+    }
 
-	public void setCf(Double cf) {
-		setCfString(cf.toString());
-	}
+    public void setCf(Double cf) {
+        setCfString(cf.toString());
+    }
 
 }
